Changes in version 0.1.2.5-xxxx - 200?-??-??
  o Minor features
    - Start using the state file to store bandwidth accounting data:
      the bw_accounting file is now obsolete.  We'll keep generating it
      for a while for people who are still using 0.1.2.4-alpha.
    - Try to batch changes to the state so that we do as few disk writes
      as possible while still storing important things in a timely
      fashion.

  o Minor bugfixes;
    - Fix a bug when a PF socket is first used.  (Patch from Fabian
      Keil.)
    - Fix an assert failure when the directory authority sets
      AuthDirRejectUnlisted and then receives a descriptor from an
      unlisted router (reported by seeess).
    - Fix a bug on the Windows implementation of tor_mmap_file that
      would prevent the cached-routers file from ever loading. (reported by
      John Kimble.)

  o Security bugfixes:
    - Do not log introduction points for hidden services if SafeLogging
      is set.
    - Clients do not store bandwidth history in their state files. (This
      shouldn't be an exploitable security issue, but it's better to be
      safe.)
    - When generating bandwidth history, round down to the nearest 1k. When
      storing accounting data, round up to the nearest 1k.

  o Controller features
    - Have GETINFO dir/status/* work on hosts with DirPort disabled.
    - Reimplement GETINFO so that info/names stays in sync with the
      actual keys.

  o Controller bugfixes:
    - Report the circuit number correctly in STREAM CLOSED events. (Bug
      reported by Mike Perry.)


Changes in version 0.1.2.4-alpha - 2006-12-03
  o Major features:
    - Add support for using natd; this allows FreeBSDs earlier than
      5.1.2 to have ipfw send connections through Tor without using
      SOCKS. (Patch from Zajcev Evgeny with tweaks from tup.)

  o Minor features:
    - Make all connections to addresses of the form ".noconnect"
      immediately get closed. This lets application/controller combos